# bass

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
bass/: helloWord.bass  helloWorld.bass  printNumber.bass
src/: CMakeLists.txt  assembler.cpp  assembler.h  assembler.hpp  ast.cpp  ast.h  ast.hpp  cli.hpp  fileBuffer.cpp  fileBuffer.hpp  generator.cpp  generator.hpp  instruction.hpp  main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  source.cpp  source.hpp  source_file.cpp  source_file.h  token.cpp  token.h  token.hpp
src/asm/: .gitignore  asm.cpp  asm.hpp  encoding.hpp  encodingData.js  encodingData.json
src/platform/: unixPlatform.cpp  win32Platform.cpp
